fix project home reno image spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -121,7 +121,7 @@ footer {
         }
     a.image-preview-lots img {
         height: 150px;
-        margin: 0px 30px 0px -20px;
+        margin: 0px 85px 0px -75px;
 
     }
 #before {
